gccida/c0/mark_target_live_regs
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mark_target_live_regs/src/resource.c:1394:20: error: expected identifier or '('
unsigned __int64 *(short *)0x; // [rsp+B8h] [rbp-A8h] 
                   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mark_target_live_regs/src/resource.c:1394:20: error: expected ')'
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mark_target_live_regs/src/resource.c:1394:19: note: to match this '('
unsigned __int64 *(short *)0x; // [rsp+B8h] [rbp-A8h] 
                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mark_target_live_regs/src/resource.c:1395:16: error: expected identifier or '('
unsigned int *(short *)0xnum_; // [rsp+C4h] [rbp-9Ch] 
               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mark_target_live_regs/src/resource.c:1395:16: error: expected ')'
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mark_target_live_regs/src/resource.c:1395:15: note: to match this '('
unsigned int *(short *)0xnum_; // [rsp+C4h] [rbp-9Ch] 
              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mark_target_live_regs/src/resource.c:1478:12: error: invalid suffix 'xnum_' on integer constant
*(short *)0xnum_ = 0; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mark_target_live_regs/src/resource.c:1491:12: error: invalid suffix 'xnum_' on integer constant
*(short *)0xnum_ = 0; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mark_target_live_regs/src/resource.c:1495:20: error: invalid suffix 'xnum_' on integer constant
while ( *(short *)0xnum_ < 2 ) 
                   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mark_target_live_regs/src/resource.c:1497:12: error: invalid suffix 'x' on integer constant
*(short *)0x = ptr_->bits[*(short *)0xnum_]; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mark_target_live_regs/src/resource.c:1497:38: error: invalid suffix 'xnum_' on integer constant
*(short *)0x = ptr_->bits[*(short *)0xnum_]; 
                                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mark_target_live_regs/src/resource.c:1498:17: error: invalid suffix 'x' on integer constant
if ( *(short *)0x ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mark_target_live_regs/src/resource.c:1503:40: error: invalid suffix 'x' on integer constant
if ( ( ( 1LL << bit_num_) & *(short *)0x) != 0 ) 
                                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mark_target_live_regs/src/resource.c:1505:12: error: invalid suffix 'x' on integer constant
*(short *)0x &= ~mask_; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mark_target_live_regs/src/resource.c:1506:29: error: invalid suffix 'xnum_' on integer constant
i = bit_num_ + ( *(short *)0xnum_ << 6) + ( ptr_->indx << 7); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mark_target_live_regs/src/resource.c:1551:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)cfun->emit->x_regno_reg_rtx[i])] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mark_target_live_regs/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mark_target_live_regs/src/resource.c:1552:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v32 = mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)cfun->emit->x_regno_reg_rtx[i])] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mark_target_live_regs/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mark_target_live_regs/src/resource.c:1563:18: error: invalid suffix 'x' on integer constant
if ( !*(short *)0x ) 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mark_target_live_regs/src/resource.c:1570:14: error: invalid suffix 'xnum_' on integer constant
++*(short *)0xnum_; 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mark_target_live_regs/src/resource.c:1572:12: error: invalid suffix 'xnum_' on integer constant
*(short *)0xnum_ = 0; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mark_target_live_regs/src/resource.c:1611:58: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( link = real_insn[3].fld[0].rtx; link; link = ( rtx)link[1] ) 
                                                         ^~~~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mark_target_live_regs/src/obj/resource.o] Error 1
